<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    app:cardBackgroundColor="?attr/colorSurfaceContainerHigh"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivArticleImage"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/article_meta_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/title"
            android:textColor="?attr/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivArticleImage" />

        <TextView
            android:id="@+id/tvSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/source"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvDotSeparator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/dot_separator"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvSource"
            app:layout_constraintEnd_toStartOf="@+id/tvPublishedAt"
            app:layout_constraintStart_toEndOf="@+id/tvSource"
            app:layout_constraintTop_toTopOf="@+id/tvSource" />


        <TextView
            android:id="@+id/tvPublishedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/published_by"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintBottom_toBottomOf="@+id/tvSource"
            app:layout_constraintStart_toEndOf="@+id/tvDotSeparator"
            app:layout_constraintTop_toTopOf="@+id/tvSource" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>